--- a/bodas.html
+++ b/bodas.html
@@ -218,76 +218,76 @@
                 </div>
                 <div class="owl-carousel testimonial-carousel">
                     <div class="text-center pb-4">
-                        <img class="img-fluid mx-auto" src="img/europa.webp" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/cancun.jpeg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Europa</p>
+                            <p class="mt-5">Cancún</p>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/canada.webp" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/cozumel.jpeg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Canada</p>
+                            <p class="mt-5">Cozumel</p>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/alaska.png" style="width:100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/playaCarmen .jpeg" style="width:100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Alaska</p>
+                            <p class="mt-5">Playa del Carmen</p>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/brasial.jpg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/PuertoVallarta.jpeg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Brasil</p>
-                        </div>
-                    </div>
-
-                    <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/china.jpg" style="width: 100px; height: 75px;" >
-                        <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">China</p>
+                            <p class="mt-5">Puerto Vallarta</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/dubai.jpg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/RiveraMaya.jpeg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Dubai</p>
+                            <p class="mt-5">Rivera Maya</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/egipto.png" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/losCabos.jpeg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Egipto</p>
+                            <p class="mt-5">Cabo San Lucas</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/italia.png" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/tulum.jpeg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Italia</p>
+                            <p class="mt-5">Tulum</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/mexico.png" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/Acapulco.jpeg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Mexico</p>
+                            <p class="mt-5">Acapulco</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/republica.png" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/Akumal.jpeg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Republica Dominicana</p>
+                            <p class="mt-5">Akumal</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/venecia.png" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/Isla.jpeg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Venecia</p>
+                            <p class="mt-5">Isla Mujeres</p>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/veracruz.jpg" style="width: 100px; height: 75px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Veracruz</p>
                         </div>
                     </div>
                 </div>
