--- a/cumpleaños.html
+++ b/cumpleaños.html
@@ -77,10 +77,10 @@
                         <a href="#" class="nav-item nav-link">+50</a>
                         <a href="#" class="nav-item nav-link">Lgbt</a>
                         <a href="#" class="nav-item nav-link">XV</a>
-                        <a href="mochileros.html" class="nav-item nav-link">Mochileros</a>
+                        <a href="/mochileros.html" class="nav-item nav-link">Mochileros</a>
                         <a href="#" class="nav-item nav-link">Mujeres</a>
                         <a href="#" class="nav-item nav-link">Teen</a>
-                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
+                        <a href="/contacto.html" class="nav-item nav-link">Contacto</a>
 
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -108,14 +108,14 @@
     <main class="main">
 
          <!-- Header Start -->
-        <div class="container-fluid page-header bodas">
+        <div class="container-fluid page-header cumpleaños">
             <div class="container">
                 <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
-                    <h3 class="display-4 text-white text-uppercase">Bodas</h3>
+                    <h3 class="display-4 text-white text-uppercase">Cumpleaños</h3>
                     <div class="d-inline-flex text-white">
                         <p class="m-0 text-uppercase"><a class="text-white" href="">Inicio</a></p>
                         <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                        <p class="m-0 text-uppercase">Bodas</p>
+                        <p class="m-0 text-uppercase">cumpleaños</p>
                     </div>
                 </div>
             </div>
@@ -158,16 +158,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
-                                    <div class="mb-3 mb-md-0">
-                                        <select class="custom-select px-4" style="height: 47px;">
-                                            <option selected>Duración</option>
-                                            <option value="1 semana - 1 mes">1 semana - 1 mes</option>
-                                            <option value="1 mes - 6 meses">1 mes - 6 meses</option>
-                                            <option value="+6 meses">+6 meses</option>
-                                        </select>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                         <div class="col-md-2">
@@ -185,20 +175,20 @@
                 <div class="row">
                     <div class="col-lg-6" style="min-height: 500px;">
                         <div class="position-relative h-100">
-                            <img class="position-absolute w-100 h-100" src="img/boda1.webp" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="img/cumple1.webp" style="object-fit: cover;">
                         </div>
                     </div>
                     <div class="col-lg-6 pt-5 pb-lg-5">
                         <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
-                            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Bodas</h6>
-                            <h1 class="mb-3">Distruta con nosotros de una boda inolvidable</h1>
-                            <p>Haz de tu boda la mejor experiencia para ti y tus invitados en el lugar que siempre soñaste.</p>
+                            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Cumpleaños</h6>
+                            <h1 class="mb-3">Esta es tu oportunidad para consentirte y dejarte consentir</h1>
+                            <p>Ven y festeja tu cumpleaños con nosotros como siempre lo has soñado, solo,  acompañado o en plan de busqueda de compañia a los mejores lugares del mundo.</p>
                             <div class="row mb-4">
                                 <div class="col-6">
-                                    <img class="img-fluid" src="img/boda2.webp" alt="">
+                                    <img class="img-fluid" src="img/cumple2.webp" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <img class="img-fluid" src="img/boda3.jpg" alt="">
+                                    <img class="img-fluid" src="img/cumple3.jpg" alt="">
                                 </div>
                             </div>
                             <a href="" class="btn btn-primary mt-1">Llamanos</a>
@@ -218,76 +208,76 @@
                 </div>
                 <div class="owl-carousel testimonial-carousel">
                     <div class="text-center pb-4">
-                        <img class="img-fluid mx-auto" src="img/cancun.jpeg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/europa.webp" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Cancún</p>
+                            <p class="mt-5">Europa</p>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/cozumel.jpeg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/canada.webp" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Cozumel</p>
+                            <p class="mt-5">Canada</p>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/playaCarmen .jpeg" style="width:100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/alaska.png" style="width:100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Playa del Carmen</p>
+                            <p class="mt-5">Alaska</p>
                         </div>
                     </div>
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/PuertoVallarta.jpeg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/brasial.jpg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Puerto Vallarta</p>
-                        </div>
-                    </div>
-
-                    <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/RiveraMaya.jpeg" style="width: 100px; height: 75px;" >
-                        <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Rivera Maya</p>
+                            <p class="mt-5">Brasil</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/losCabos.jpeg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/china.jpg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Cabo San Lucas</p>
+                            <p class="mt-5">China</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/tulum.jpeg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/dubai.jpg" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Tulum</p>
+                            <p class="mt-5">Dubai</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/Acapulco.jpeg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/egipto.png" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Acapulco</p>
+                            <p class="mt-5">Egipto</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/Akumal.jpeg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/italia.png" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Akumal</p>
+                            <p class="mt-5">Italia</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/Isla.jpeg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/mexico.png" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Isla Mujeres</p>
+                            <p class="mt-5">Mexico</p>
                         </div>
                     </div>
 
                     <div class="text-center">
-                        <img class="img-fluid mx-auto" src="img/veracruz.jpg" style="width: 100px; height: 75px;" >
+                        <img class="img-fluid mx-auto" src="img/republica.png" style="width: 100px; height: 75px;" >
                         <div class="testimonial-text bg-white p-4 mt-n5">
-                            <p class="mt-5">Veracruz</p>
+                            <p class="mt-5">Republica Dominicana</p>
+                        </div>
+                    </div>
+
+                    <div class="text-center">
+                        <img class="img-fluid mx-auto" src="img/venecia.png" style="width: 100px; height: 75px;" >
+                        <div class="testimonial-text bg-white p-4 mt-n5">
+                            <p class="mt-5">Venecia</p>
                         </div>
                     </div>
                 </div>
