--- a/contacto.html
+++ b/contacto.html
@@ -72,7 +72,7 @@
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link ">Inicio</a>
-                        <a href="#" class="nav-item nav-link">Bodas</a>
+                        <a href="cumpleaños.html" class="nav-item nav-link">Bodas</a>
                         <a href="#" class="nav-item nav-link">Cumpleaños</a>
                         <a href="#" class="nav-item nav-link">+50</a>
                         <a href="#" class="nav-item nav-link">Lgbt</a>
