--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="bodas.html" class="nav-item nav-link">Bodas</a>
-                        <a href="#" class="nav-item nav-link">Cumpleaños</a>
+                        <a href="cumpleaños.html" class="nav-item nav-link">Cumpleaños</a>
                         <a href="#" class="nav-item nav-link">+50</a>
                         <a href="#" class="nav-item nav-link">Lgbt</a>
                         <a href="#" class="nav-item nav-link">XV</a>
