--- a/mochileros.html
+++ b/mochileros.html
@@ -80,7 +80,7 @@
                         <a href="#" class="nav-item nav-link">Mochileros</a>
                         <a href="#" class="nav-item nav-link">Mujeres</a>
                         <a href="#" class="nav-item nav-link">Teen</a>
-                        <a href="#" class="nav-item nav-link">Contacto</a>
+                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
 
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
