--- a/mochileros.html
+++ b/mochileros.html
@@ -73,11 +73,11 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="bodas.html" class="nav-item nav-link active">Bodas</a>
-                        <a href="#" class="nav-item nav-link">Cumpleaños</a>
+                        <a href="cumpleaños.html" class="nav-item nav-link">Cumpleaños</a>
                         <a href="#" class="nav-item nav-link">+50</a>
                         <a href="#" class="nav-item nav-link">Lgbt</a>
                         <a href="#" class="nav-item nav-link">XV</a>
-                        <a href="#" class="nav-item nav-link">Mochileros</a>
+                        <a href="mochileros.html" class="nav-item nav-link">Mochileros</a>
                         <a href="#" class="nav-item nav-link">Mujeres</a>
                         <a href="#" class="nav-item nav-link">Teen</a>
                         <a href="contacto.html" class="nav-item nav-link">Contacto</a>
