--- a/bodas.html
+++ b/bodas.html
@@ -74,9 +74,9 @@
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="bodas.html" class="nav-item nav-link active">Bodas</a>
                         <a href="cumpleaños.html" class="nav-item nav-link">Cumpleaños</a>
-                        <a href="#" class="nav-item nav-link">+50</a>
-                        <a href="#" class="nav-item nav-link">Lgbt</a>
-                        <a href="#" class="nav-item nav-link">XV</a>
+                        <a href="plus50.html" class="nav-item nav-link">+50</a>
+                        <a href="lgbt.html" class="nav-item nav-link">Lgbt</a>
+                        <a href="xv.html" class="nav-item nav-link">XV</a>
                         <a href="mochileros.html" class="nav-item nav-link">Mochileros</a>
                         <a href="#" class="nav-item nav-link">Mujeres</a>
                         <a href="#" class="nav-item nav-link">Teen</a>
@@ -301,7 +301,9 @@
     <footer class="footer">
 		<div class="container">
 			<div class="footer__text">
-				<h1>Copyright 2023. Ed Travel.</h1>		
+				<h1>Copyright 2023. Ed Travel.</h1>	
+                <h1>Todos los derechos reservador por S21SISTEM SA DE CV</h1>	
+                <a href="https://s21sistem.com/"> s21sistem.com</a>
 			</div>
 		</div>
 	</footer>
