--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="bodas.html" class="nav-item nav-link">Bodas</a>
                         <a href="cumpleaños.html" class="nav-item nav-link">Cumpleaños</a>
-                        <a href="#" class="nav-item nav-link">+50</a>
-                        <a href="#" class="nav-item nav-link">Lgbt</a>
-                        <a href="#" class="nav-item nav-link">XV</a>
+                        <a href="plus50.html" class="nav-item nav-link">+50</a>
+                        <a href="lgbt.html" class="nav-item nav-link">Lgbt</a>
+                        <a href="xv.html" class="nav-item nav-link">XV</a>
                         <a href="mochileros.html" class="nav-item nav-link">Mochileros</a>
                         <a href="#" class="nav-item nav-link">Mujeres</a>
                         <a href="#" class="nav-item nav-link">Teen</a>
@@ -182,16 +182,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
-                                    <div class="mb-3 mb-md-0">
-                                        <select class="custom-select px-4" style="height: 47px;">
-                                            <option selected>Duración</option>
-                                            <option value="1 semana - 1 mes">1 semana - 1 mes</option>
-                                            <option value="1 mes - 6 meses">1 mes - 6 meses</option>
-                                            <option value="+6 meses">+6 meses</option>
-                                        </select>
-                                    </div>
-                                </div>
+
                             </div>
                         </div>
                         <div class="col-md-2">
@@ -288,7 +279,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
-                            <img class="img-fluid" src="img/destination-1.jpg" alt="">
+                            <img class="img-home" src="img/destination-1.jpg" alt="">
                             <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">Estados Unidos</h5>
                                 <span>+50 cuidades</span>
@@ -297,7 +288,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
-                            <img class="img-fluid" src="img/destination-2.jpg" alt="">
+                            <img class="img-home" src="img/destination-2.jpg" alt="">
                             <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">Reino unido</h5>
                                 <span>+50 cuidades</span>
@@ -306,7 +297,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
-                            <img class="img-fluid" src="img/destination-3.jpg" alt="">
+                            <img class="img-home" src="img/destination-3.jpg" alt="">
                             <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">Australia</h5>
                                 <span>+50 cuidades</span>
@@ -315,7 +306,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
-                            <img class="img-fluid" src="img/destination-4.jpg" alt="">
+                            <img class="img-home" src="img/destination-4.jpg" alt="">
                             <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">India</h5>
                                 <span>+50 cuidades</span>
@@ -324,7 +315,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
-                            <img class="img-fluid" src="img/destination-5.jpg" alt="">
+                            <img class="img-home" src="img/destination-5.jpg" alt="">
                             <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">Sudáfrica</h5>
                                 <span>+50 cuidades</span>
@@ -333,7 +324,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="destination-item position-relative overflow-hidden mb-2">
-                            <img class="img-fluid" src="img/destination-6.jpg" alt="">
+                            <img class="img-home" src="img/destination-6.jpg" alt="">
                             <div class="destination-overlay text-white text-decoration-none" href="">
                                 <h5 class="text-white">Indonesia</h5>
                                 <span>+50 cuidades</span>
@@ -391,7 +382,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 mb-4">
                         <a class="package-item bg-white mb-2">
-                            <img class="img-fluid" src="img/bodas.webp" alt="">
+                            <img class="img-home" src="img/bodas.webp" alt="">
                             <div class="p-4">
                                 
                                 <a class="h5 text-decoration-none" href="">Bodas</a>
@@ -406,7 +397,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <a class="package-item bg-white mb-2">
-                            <img class="img-fluid" src="img/cumpleaños.jpeg" alt="">
+                            <img class="img-home" src="img/cumpleaños.jpeg" alt="">
                             <div class="p-4">
                                 <a class="h5 text-decoration-none" href="">Cumpleaños</a>
                                 <div class="border-top mt-4 pt-4">
@@ -420,7 +411,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <a class="package-item bg-white mb-2">
-                            <img class="img-fluid" src="img/+50.jpg" alt="">
+                            <img class="img-home" src="img/+50.jpg" alt="">
                             <div class="p-4">
                                 <a class="h5 text-decoration-none" href="">+ 50</a>
                                 <div class="border-top mt-4 pt-4">
@@ -434,7 +425,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <a class="package-item bg-white mb-2">
-                            <img class="img-fluid" src="img/lgbt.jpg" alt="">
+                            <img class="img-home" src="img/lgbt.jpg" alt="">
                             <div class="p-4">
                                 <a class="h5 text-decoration-none" href="">Comunidad LGBT</a>
                                 <div class="border-top mt-4 pt-4">
@@ -448,7 +439,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <a class="package-item bg-white mb-2">
-                            <img class="img-fluid" src="img/xv.webp" alt="">
+                            <img class="img-home" src="img/xv.webp" alt="">
                             <div class="p-4">
                                 <a class="h5 text-decoration-none" href="">XV</a>
                                 <div class="border-top mt-4 pt-4">
@@ -462,7 +453,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 mb-4">
                         <a class="package-item bg-white mb-2">
-                            <img class="img-fluid" src="img/mochileros.jpg" alt="">
+                            <img class="img-home" src="img/mochileros.jpg" alt="">
                             <div class="p-4">
                                 <a class="h5 text-decoration-none" href="">Mochileros</a>
                                 <div class="border-top mt-4 pt-4">
@@ -477,7 +468,7 @@
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <a class="package-item bg-white mb-2">
-                            <img class="img-fluid" src="img/package-6.jpg" alt="">
+                            <img class="img-home" src="img/package-6.jpg" alt="">
                             <div class="p-4">
                                 <a class="h5 text-decoration-none" href="">Mujeres</a>
                                 <div class="border-top mt-4 pt-4">
@@ -492,7 +483,7 @@
 
                     <div class="col-lg-4 col-md-6 mb-4">
                         <a class="package-item bg-white mb-2">
-                            <img class="img-fluid" src="img/niños.jpg" alt="">
+                            <img class="img-home" src="img/niños.jpg" alt="">
                             <div class="p-4">
                                 <a class="h5 text-decoration-none" href="">Teen</a>
                                 <div class="border-top mt-4 pt-4">
@@ -514,7 +505,9 @@
     <footer class="footer">
 		<div class="container">
 			<div class="footer__text">
-				<h1>Copyright 2023. Ed Travel.</h1>		
+				<h1>Copyright 2023. Ed Travel.</h1>	
+                <h1>Todos los derechos reservador por S21SISTEM SA DE CV</h1>	
+                <a href="https://s21sistem.com/"> s21sistem.com</a>
 			</div>
 		</div>
 	</footer>
