--- a/xv.html
+++ b/xv.html
@@ -73,14 +73,14 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="bodas.html" class="nav-item nav-link">Bodas</a>
-                        <a href="cumpleaños.html" class="nav-item nav-link active">Cumpleaños</a>
+                        <a href="cumpleaños.html" class="nav-item nav-link">Cumpleaños</a>
                         <a href="plus50.html" class="nav-item nav-link">+50</a>
                         <a href="lgbt.html" class="nav-item nav-link">Lgbt</a>
-                        <a href="xv.html" class="nav-item nav-link">XV</a>
-                        <a href="/mochileros.html" class="nav-item nav-link">Mochileros</a>
+                        <a href="xv.html" class="nav-item nav-link active">XV</a>
+                        <a href="mochileros.html" class="nav-item nav-link">Mochileros</a>
                         <a href="#" class="nav-item nav-link">Mujeres</a>
                         <a href="#" class="nav-item nav-link">Teen</a>
-                        <a href="/contacto.html" class="nav-item nav-link">Contacto</a>
+                        <a href="contacto.html" class="nav-item nav-link">Contacto</a>
 
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -108,14 +108,14 @@
     <main class="main">
 
          <!-- Header Start -->
-        <div class="container-fluid page-header cumpleaños">
+        <div class="container-fluid page-header five">
             <div class="container">
                 <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
-                    <h3 class="display-4 text-white text-uppercase">Cumpleaños</h3>
+                    <h3 class="display-4 text-white text-uppercase">LGBT+</h3>
                     <div class="d-inline-flex text-white">
                         <p class="m-0 text-uppercase"><a class="text-white" href="">Inicio</a></p>
                         <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                        <p class="m-0 text-uppercase">cumpleaños</p>
+                        <p class="m-0 text-uppercase">Lgbt+</p>
                     </div>
                 </div>
             </div>
@@ -175,20 +175,21 @@
                 <div class="row">
                     <div class="col-lg-6" style="min-height: 500px;">
                         <div class="position-relative h-100">
-                            <img class="position-absolute w-100 h-100" src="img/cumple1.webp" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="img/xv3.jpg" style="object-fit: cover;">
                         </div>
                     </div>
                     <div class="col-lg-6 pt-5 pb-lg-5">
                         <div class="about-text bg-white p-4 p-lg-5 my-lg-5">
-                            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Cumpleaños</h6>
-                            <h1 class="mb-3">Esta es tu oportunidad para consentirte y dejarte consentir</h1>
-                            <p>Ven y festeja tu cumpleaños con nosotros como siempre lo has soñado, solo,  acompañado o en plan de busqueda de compañia a los mejores lugares del mundo.</p>
+                            <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Celebra de diversidad</h6>
+                            <h1 class="mb-3">Comienza esta nueva etapa explorando el mundo tu sola</h1>
+                            <p>La mejor manera de celebrar tus Quince Años y recordarlo por siempre, es hacer el viaje de tus sueños.
+                            </p>
                             <div class="row mb-4">
                                 <div class="col-6">
-                                    <img class="img-fluid" src="img/cumple2.webp" alt="">
+                                    <img class="img-fluid"  src="img/xv2.webp" alt="">
                                 </div>
                                 <div class="col-6">
-                                    <img class="img-fluid" src="img/cumple3.jpg" alt="">
+                                    <img class="img-fluid"  src="img/xv1.jpg" alt="">
                                 </div>
                             </div>
                             <a href="" class="btn btn-primary mt-1">Llamanos</a>
@@ -204,7 +205,7 @@
             <div class="container py-5">
                 <div class="text-center mb-3 pb-3">
                     <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Lugares</h6>
-                    <h1>Lugares disponibles para disfrutar de tu evento </h1>
+                    <h1>Lugares disponibles para consentirte </h1>
                 </div>
                 <div class="owl-carousel testimonial-carousel">
                     <div class="text-center pb-4">
